Remove unnecessary lines.

--- a/Geometry1/makefile
+++ b/Geometry1/makefile
@@ -3,18 +3,20 @@ COMPILE = g++ $(CFLAGS) -c
 LINK = g++ $(CFLAGS)
 LIBS = -lGL -lGLU -lglut -lqd -lmpfr
 
+all	: main.o ps1-nishida.o point.o acp.o
+	$(LINK) main.o ps1-nishida.o point.o acp.o $(LIBS) -o main
+
 acp.o:	acp.cc acp.h
 	$(COMPILE) acp.cc
 
 point.o: point.C point.h object.h pv.h acp.h
 	$(COMPILE) point.C
 
-hull.o: hull.C hull.h object.h pv.h acp.h
-	$(COMPILE) hull.C
+ps1-nishida.o	: ps1-nishida.C 
+	$(COMPILE) ps1-nishida.C
 
-hull	: hullplot.o plot.o hull.o point.o acp.o
-	$(LINK) hullplot.o plot.o hull.o point.o acp.o \
-	$(LIBS) -o hull
+main.o	: main.C
+	$(COMPILE) main.C
 
 clean : 
-	rm -f *.o *~ hull mindisk setop mink triangulate tmap voronoi delaunay hull3
+	rm -f *.o *~ main
