--- a/Geometry1/Geometry1.vcxproj
+++ b/Geometry1/Geometry1.vcxproj
@@ -62,15 +62,16 @@
   <ItemGroup>
     <ClCompile Include="acp.cc" />
     <ClCompile Include="hull.C" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.C" />
     <ClCompile Include="point.C" />
-    <ClCompile Include="ps1-nishida.cpp" />
+    <ClCompile Include="ps1-nishida.C" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="acp.h" />
     <ClInclude Include="hull.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="point.h" />
+    <ClInclude Include="ps1-nishida.h" />
     <ClInclude Include="pv.h" />
     <ClInclude Include="qd\qd_config.h" />
     <ClInclude Include="qd\qd_inline.h" />
